--- a/b-tree/CMakeLists.txt
+++ b/b-tree/CMakeLists.txt
@@ -4,4 +4,4 @@ project(data_structures C)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 -g -fno-omit-frame-pointer")
 
-add_executable(data_structures b-tree/main.c)
+add_executable(data_structures main.c btree.c)
